<?xml version="1.0"?>
<package format="2">
  <name>kindr_ros</name>
  <version>0.3.4</version>
  <description>The kindr_ros package</description>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>
  <license>BSD</license>
  <author email="cgehring@anybotics.com">Christian Gehring</author>
  <url>https://github.com/anybotics/kindr_ros</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>kindr</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <build_export_depend>eigen3_cmake_module</build_export_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export>
   <build_type>ament_cmake</build_type>
  </export>
</package>
